core/cu29_derive/tests/compile_fail/copper_runtime/invalid_config_path.rs
use cu29_derive::copper_runtime;

#[copper_runtime(config = "path/to/config.ron")]
struct MyApplicationStruct;

fn main() {}