core/cu29_derive/tests/compile_fail/copper_runtime/invalid_config_path.stderr
error: The configuration file `path/to/config.ron` does not exist. Please provide a valid path.
 --> tests/compile_fail/copper_runtime/invalid_config_path.rs:3:1
  |
3 | #[copper_runtime(config = "path/to/config.ron")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `copper_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
